# lattice

./: .gitignore  README.md  RELEASE.md  build.sh  mutation-report.md  peru.yaml
.github/workflows/: ci.yml  nightly.yml  release.yml
app/: README.md  settings.gradle.kts
app/composeApp/: build.gradle.kts
app/gradle/: libs.versions.toml
desk/: README.md  desk.docket-0
desk/app/: lattice.hoon
desk/lib/: catalog-analyzer.hoon  catalog.hoon  four.gmi  hello.gmi  index.gmi  lattice-grubbery.hoon  lattice.hoon  three.gmi  two.gmi
desk/mar/: gmi.hoon
desk/sur/: lattice.hoon
docs/: agent-knowledge.md  catalog.md  cutover-runbook.md  grubbery-migration.md  lattice-integration-test.md  pages.md  platform.md  urls.md
docs/page-examples/: card.hoon  clock.hoon  counter.hoon  dashboard.hoon  doubler.hoon  greeter.hoon  markdown.hoon  note.hoon  ticker.hoon
examples/static-site/: README.md  deploy.sh  site.hoon  site.js  theme.css
grubbery-overlay/: README.md
grubbery-overlay/lib/: catalog-analyzer.hoon  catalog.hoon  lattice-bookmark.hoon  lattice-comment.hoon  lattice-eval.hoon  lattice-know.hoon  (+5 more)
lattice-fs/: .gitignore  README.md
lattice-fs-rs/: Cargo.toml  README.md
lattice-fs-rs/src/: core.rs  eyre.rs  lattice.rs  lick.rs  main.rs  projection.rs  transport.rs
scripts/: build-appimage.sh  design-clearweb.mjs  desk-test.sh  e2e.sh  mcp-zod.sh  overlay-test.sh  remote-home-repro.sh  rev-gap-repro.sh  review-clearweb.mjs  review-lattice.mjs  setup-catalog-mcp-tools.py  setup-knowledge-mcp-tools.py  sync-overlay.sh
web/: index.html  lattice.gmi
(+186 files in other folders)
